--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,23 @@
 version: '3.7'
 
 services:
-  job_website:
-    build: .
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  django_gunicorn:
     volumes:
-      - .:/usr/src/job_website
-    environment:
-      - DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB
+      - static:/static
+    env_file:
+      - .env
+    build:
+      context: .
     ports:
-      - 8000:8000
+      - "8000:8000"
+  nginx:
+    build: ./nginx
+    volumes:
+      - static:/static
+    ports:
+      - "80:80"
     depends_on:
-      - db
-
-  db:
-    image: postgres:12.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_DB=$POSTGRES_DB
-    expose:
-      - 5432
-    ports:
-      - 5432:5432
+      - django_gunicorn
 
 volumes:
-  postgres_data:
+  static:
