--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 asgiref==3.4.1
 boto3==1.19.1
 botocore==1.22.1
+certifi==2022.6.15
+charset-normalizer==2.1.1
 Django==3.2.8
+django-dotenv==1.4.2
 django-filter==21.1
 django-storages==1.12.2
 djangorestframework==3.12.4
 gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.12.0
 jmespath==0.10.0
+Markdown==3.4.1
 Pillow==8.4.0
 psycopg2-binary==2.9.1
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.28.1
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
 whitenoise==5.3.0
-django-dotenv
+zipp==3.8.1
