--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,10 @@
 version: '3.7'
 
 services:
-  django_gunicorn:
+  job_website:
+    build: .
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
-      - static:/static
-    env_file:
-      - .env
-    build:
-      context: .
+      - .:/usr/src/job_website
     ports:
-      - "8000:8000"
-  nginx:
-    build: ./nginx
-    volumes:
-      - static:/static
-    ports:
-      - "80:80"
-    depends_on:
-      - django_gunicorn
-
-volumes:
-  static:
+      - 8000:8000
